Build a Fraction: Numbers: Have the fraction skeleton start smaller in the toolbox, and reduce the toolbox height
Build a Fraction: Put reset and refresh buttons horizontally next to each other centered below the level title
# 1.00.08 (65996) Jul 18, 2012
Fraction Matcher: Animate level selection screen/game screen
Fraction Matcher: Added support for RTL languages in the control panel, see #3369
Fraction Matcher: Moved smiling face to the right so it doesn't overlap with back button
Fraction Matcher: Converted "new game" button to a back button
Build a Fraction: Shapes: Stack pieces up and to the left with less spacing
Fraction Matcher: Fixed: "My Matches" text can go offscreen to the left, see #3368
# 1.00.07 (65969) Jul 17, 2012
Build a Fraction: Numbers: Fixed: Scoring cells weren't highlighting on levels >=2
Build a Fraction: Numbers: Fixed: Ding sound wasn't playing for individual matches
# 1.00.06 (65965) Jul 17, 2012
Build a Fraction: Shapes: Use stacks of cards for level selection icon
Build a Fraction: Shapes: Fixed: Shapes put into container on level 3 have pieces drag when they shouldn't.
Build a Fraction: Shapes: Fixed: Target cell isn't flashing
Build a Fraction: Shapes: Fixed: Level refresh wasn't working
Build a Fraction: Shapes: Fixed z-ordering and card layout positions
Build a Fraction: Numbers: Move cards closer to the bottom of the stack instead of original location when stack is depleting
Build a Fraction: Numbers: Fix z-ordering when returning number cards to the toolbox so that stacks will look like they did at startup
Build a Fraction: Numbers: Only allow front card to be picked
Build a Fraction: On 2nd page of level selection screen, use 4 stars as max
Fraction Matcher: Changed stopwatch and timer components to pairs of radio buttons instead of toggle buttons
Build a Fraction: Augment level list for picture levels 6-10 (with copies of level 5)
Build a Fraction: When going back to level selection carousel, remember which page you were on.